fail_crate/tests/optional_and_into.stderr
error: `optional` cannot be combined with `into` in field `#[new(...)]`.
 --> fail_crate/tests/optional_and_into.rs:5:11
  |
5 |     #[new(optional, into)]
  |           ^^^^^^^^
